--- a/client/index.html
+++ b/client/index.html
@@ -6,15 +6,15 @@
     <base href="/"/>
  
     <!-- 1. Load libraries -->
-    <script src="node_modules/core-js/client/shim.min.js"></script>
-    <script src="node_modules/zone.js/dist/zone.js"></script>
-    <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>
+    <script src="../node_modules/core-js/client/shim.min.js"></script>
+    <script src="../node_modules/zone.js/dist/zone.js"></script>
+    <script src="../node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="../node_modules/systemjs/dist/system.src.js"></script>
  
     <!-- 2. Configure SystemJS -->
-    <script src="www/systemjs.config.js"></script>
+    <script src="./systemjs.config.js"></script>
     <script>
-         System.import('app2').catch(function(err){ console.error(err); });
+         System.import('app').catch(function(err){ console.error(err); });
     </script>
  
   </head>
