--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,15 @@
     <!DOCTYPE html>
     <title>Angular2 application</title>
     <base href="/"/>
- 
+        
     <!-- 1. Load libraries -->
-    <script src="../node_modules/core-js/client/shim.min.js"></script>
-    <script src="../node_modules/zone.js/dist/zone.js"></script>
-    <script src="../node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="../node_modules/systemjs/dist/system.src.js"></script>
+    <script src="./node_modules/core-js/client/shim.min.js"></script>
+    <script src="./node_modules/zone.js/dist/zone.js"></script>
+    <script src="./node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="./node_modules/systemjs/dist/system.src.js"></script>
  
     <!-- 2. Configure SystemJS -->
-    <script src="./systemjs.config.js"></script>
+    <script src="./www/systemjs.config.js"></script>
     <script>
          System.import('app').catch(function(err){ console.error(err); });
     </script>
@@ -20,7 +20,7 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>Loading...</my-app>    
   </body>
  
 </html>
