--- a/server/client/index.html
+++ b/server/client/index.html
@@ -10,7 +10,8 @@
     <script src="./node_modules/zone.js/dist/zone.js"></script>
     <script src="./node_modules/reflect-metadata/Reflect.js"></script>
     <script src="./node_modules/systemjs/dist/system.src.js"></script>
- 
+    <script src="https://cdn.auth0.com/js/lock/10.6/lock.min.js"></script>
+   
     <!-- 2. Configure SystemJS -->
     <script src="./www/systemjs.config.js"></script>
     <script>
