--- a/server/client/index.html
+++ b/server/client/index.html
@@ -10,7 +10,14 @@
     <script src="./node_modules/zone.js/dist/zone.js"></script>
     <script src="./node_modules/reflect-metadata/Reflect.js"></script>
     <script src="./node_modules/systemjs/dist/system.src.js"></script>
+    <!--2 Bootstrap CSS -->
+    <script src="./node_modules/jquery/dist/jquery.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"></script>
+    <!-- Auth0Lock component -->
     <script src="https://cdn.auth0.com/js/lock/10.6/lock.min.js"></script>
+
+
    
     <!-- 2. Configure SystemJS -->
     <script src="./www/systemjs.config.js"></script>
@@ -20,7 +27,7 @@
  
   </head>
   <!-- 3. Display the application -->
-  <body>
+  <body>  
     <my-app>Loading...</my-app>    
   </body>
  
